Adding support for dynamically loading the agent into a running process.